chat: fix font size for code blocks
I can't recall why this was added, but after they changed the font, it
started to cause code blocks to overlap each other.

--- a/discord.user.styl
+++ b/discord.user.styl
@@ -1986,11 +1986,11 @@
 
   /// Code blocks.
   [class*="markup-"] {
+    line-height: 1.5;
     code {
       font-family: var(--codearea) !important;
       &.inline {
         padding: 2px 4px;
-        font-size: 100%;
         c: 0 0 $darken;
         box-shadow: inset 0 0 0 1px $darker;
       }
